# oasis-ethwasi-runtime

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs  feature.benchmark.addendum  feature.production-genesis.addendum
.buildkite/: benchmarking.pipeline.yml  daily.pipeline.yml  deploy.pipeline.yml  deploy.production.pipeline.yml  e2e-tests.pipeline.yml  pipeline.yml
.buildkite/docker/: Dockerfile  build_tag_publish_deployment_image.sh  promote_docker_image.sh
.buildkite/go/: build_ekiden_go.sh
.buildkite/rust/: build_and_test_generic.sh  build_and_test_runtime.sh  build_ekiden_binaries.sh  build_generic.sh  build_keymanager_enclave.sh  build_runtime.sh  build_runtime_benchmark.sh  cargo_audit.sh  code_coverage.sh  common.sh  lint.sh  lint.txt  run_basic_wasm_test.sh  run_celer_tests.sh  run_end_to_end_test.sh  run_end_to_end_tests.sh  run_ens_tests.sh  run_pubsub_test.sh  run_rpc_test.sh  run_rust_logistic_test.sh  run_storage_test.sh  run_tvm_basic_test.sh  run_web3c_test.sh  test_generic.sh  test_runtime_and_gateway.sh
.buildkite/scripts/: build_benchmarking_context.sh  build_deployment_context.sh  build_tag_publish_deployment_image.sh  build_tag_push_benchmark_image.sh  build_tag_push_deployment_image.sh  common_e2e.sh  download_artifact.sh  download_common_artifacts.sh  download_ekiden_test_scripts.sh  download_utils.sh  extract_platform_resources.sh  install-e2e-dependencies.sh  promote_deployment_image_to.sh  run_dapp_test.sh  set_docker_tag_meta_data.sh  test_e2e.sh  trigger_benchmark_run.sh  trigger_deployment_to.sh
.circleci/: config.yml
.github/: CODEOWNERS  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: Cargo.toml  build.rs
api/src/: api.proto  api.rs  error.rs  filter.rs  lib.rs  state.rs
benchmark/: .gitignore  Cargo.toml  Gopkg.toml  Makefile  go.mod  go.sum  main.go
benchmark/benchmarks/api/: api.go
benchmark/benchmarks/basic/: basic.go
benchmark/benchmarks/playback/: playback.go
benchmark/benchmarks/storage/: storage.go
benchmark/benchmarks/transfer/: transfer.go
benchmark/cmd/: benchmark_cmd.go  debug_faucet_lite.go  root.go
benchmark/contracts/readwrite/: Cargo.toml
benchmark/contracts/readwrite/src/: lib.rs
benchmark/scripts/: test-web3.sh
benchmark/src/: main.rs
client/: Cargo.toml
client/src/: error.rs  main.rs  util.rs
client/src/miner/: mod.rs  state.rs
client/src/rpc/: filter.rs  mod.rs  serialize.rs  serves.rs  solidity.rs  util.rs
common/: Cargo.toml
common/src/: confidential.rs  genesis.rs  lib.rs  parity.rs  storage.rs
common/src/confidential/: confidential_ctx.rs  crypto.rs  key_manager.rs  mod.rs
configs/: single_node.yml  single_node_sgx.yml
configs/developer-gateway/: testing.toml
configs/single_node/: genesis.json  identity.pem  identity_pub.pem  node_genesis.json  runtime_genesis.json
configs/single_node_sgx/: genesis.json  p2p.pem  (+6 more)
examples/client/: Cargo.toml
examples/client/src/: main.rs
fuzz/: Cargo.toml  README.md  fuzz.py  run.sh
gateway/: Cargo.toml  build.rs
gateway/resources/: mockdb.json
gateway/src/: client.rs  extractors.rs  future_ext.rs  informant.rs  lib.rs  middleware.rs  notifier.rs  pubsub.rs  rpc.rs  rpc_apis.rs  run.rs  servers.rs  state.rs  storage.rs  test_helpers.rs  translator.rs  util.rs
gateway/src/impls/: confidential.rs  eth.rs  eth_filter.rs  eth_pubsub.rs  eth_signing.rs  mod.rs  net.rs  oasis.rs  trace.rs  web3.rs
gateway/src/middleware/: mod.rs  rate_limit.rs  request_logger.rs
gateway/src/traits/: confidential.rs  mod.rs  oasis.rs
genesis/: Cargo.toml
genesis/src/: main.rs
inspector/: Cargo.toml
inspector/parity_patricia_trie/: Cargo.toml
inspector/parity_patricia_trie/src/: lib.rs  lookup.rs  nibbleslice.rs  nibblevec.rs  node.rs  recorder.rs  triedb.rs
inspector/src/: main.rs
keymanager-runtime/: Cargo.toml
playback/: Cargo.toml
playback/src/: main.rs
scripts/: buildhook-notify.sh  check_artifacts.sh  color-log.py  determine-build-versioning.sh  download_artifacts.sh  gateway.sh  get-docker-tag.bats  get-docker-tag.sh  oasis.sh  regenerate_single_node.sh  request.sh  request_raw.sh  setup-e2e.sh  symlink_artifacts.sh  symlink_ekiden.sh  test-basic-wasm.sh  test-dapp.sh  test-dapps.sh  test-e2e.sh  test-estimate-gas.js  test-pubsub.sh  test-rpc.sh  test-storage.sh  test-web3.sh  test-web3cjs.sh  test_counter.sh  test_origin.sh  test_rust_logistic.sh  test_tvm_basic.sh  test_tvm_contract.sh  test_tvm_logistic.sh  test_tvm_logistic_contract.sh  utils.sh
src/: block.rs  cache.rs  dispatcher.rs  evm.rs  execution.rs  genesis.json  genesis.rs  genesis_benchmarking.json  lib.rs  logger.rs  methods.rs  miner.rs  state.rs  storage.rs  util.rs
storagestudy/: Cargo.toml  storagestudy_parse.py
t/: Cargo.toml
t/src/: main.rs
test_contract/: Cargo.toml  Makefile  build.rs  rust-toolchain  test.s  test.wast
test_contract/libbar/: .gitignore  bar.bc  bar.s
test_contract/src/: lib.rs
tests/: contract_storage_encryption.rs  create.rs  estimate_gas.rs  oasis_runtime.rs  package.json  runtime_ethereum.rs  storage_expiry.rs  truffle.js  wasi.rs
tests-e2e/contracts/cross_contract/rust/existing/: Cargo.toml
tests-e2e/contracts/cross_contract/rust/existing/src/: lib.rs
tests-e2e/contracts/rust-logistic/: Cargo.toml
tests-e2e/contracts/rust-logistic/src/: lib.rs
tests-e2e/contracts/storage/: Cargo.toml
tests-e2e/contracts/storage/src/: lib.rs
tests/contracts/basic_wasm/: Cargo.toml
tests/contracts/rust-logistic-contract/: Cargo.toml  build.sh
tests/contracts/rust-logistic-contract/.cargo/: config
tests/contracts/rust-logistic-contract/src/: lib.rs
tests/contracts/storage_contract/: Cargo.toml  build.sh
tests/contracts/storage_contract/src/: lib.rs
tests/contracts/tvm_basic/: Cargo.toml  Makefile  build.rs
tests/contracts/tvm_basic/src/: lib.rs  prepare_test_libs.py
tests/contracts/tvm_contract/: Cargo.toml  Makefile  build.rs
tests/contracts/tvm_contract/src/: lib.rs
tests/run_contract/: Cargo.toml
tests/run_contract/src/: lib.rs  main.rs
(+164 files in other folders)
