[package]
name = "runtime-ethereum-api"
version = "0.2.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[dependencies]
ekiden-runtime = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
failure = "0.1.5"
serde = "1.0.71"
serde_derive = "1.0"
serde_bytes = "~0.10"
