[package]
name = "oasis-ethwasi-runtime-api"
version = "0.2.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[dependencies]
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.11" }

ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
serde = "1.0.71"
serde_bytes = "~0.10"
serde_derive = "1.0"
thiserror = "1.0"
