[package]
name = "web3_benchmark"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
clap = "2.29.1"
ethcore-transaction = { git = "https://github.com/oasislabs/parity", branch = "ekiden-web3" }
ethereum-types = { git = "https://github.com/oasislabs/primitives", branch = "ekiden" }
ethkey = { git = "https://github.com/oasislabs/parity", branch = "ekiden-web3" }
hex = "0.3"
jsonrpc-client-core = "0.3.0"
jsonrpc-client-http = "0.3.0"
lazy_static = "1.0.1"
log = "0.4"
pretty_env_logger = "0.2"
rand = "0.4"
rlp = { git = "https://github.com/oasislabs/parity", branch = "ekiden-web3" }
serde = "1.0"
serde_json = "1.0"
wasmi = "=0.2.0"

[patch.crates-io]
ring = { git = "https://github.com/oasislabs/ring", branch = "0.12.1-ekiden" }
