[package]
name = "web3_benchmark"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
clap = "2.29.1"
ekiden-instrumentation = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-instrumentation-prometheus = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ethcore-transaction = { git = "https://github.com/paritytech/parity-ethereum", branch = "master" }
ethereum-types = "0.4"
ethkey = { git = "https://github.com/paritytech/parity-ethereum", branch = "master" }
hex = "0.3"
jsonrpc-client-core = "0.3.0"
jsonrpc-client-http = "0.3.0"
lazy_static = "1.0.1"
log = "0.4"
pretty_env_logger = "0.2"
# (pinning transitive dependency) in 0.4.18,
# error[E0658]: use of unstable library feature 'proc_macro' (see issue #38356)
proc-macro2 = "=0.4.17"
prometheus = { version = "~0.4.2", features = ["push"] }
rand = "0.4"
rlp = { version = "0.3.0", features = ["ethereum"] }
serde = "1.0"
serde_json = "1.0"
wasmi = "=0.2.0"

[patch.crates-io]
ring = { git = "https://github.com/oasislabs/ring", branch = "0.12.1-ekiden" }
