[package]
name = "web3-client"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>", "Wei Tang <hi@that.world>"]

[dependencies]

## Ekiden client dependencies

client-utils = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-core = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-contract-client = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-rpc-client = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
evm-api = { path = "../api" }
clap = "2.29.1"
rand = "0.4"
futures = "0.1.18"
grpcio = "0.2.2"

## Sputnik/EVM dependencies

hex = "0.3.1"
#futures = "0.1"

sputnikvm = { git = "https://github.com/ekiden/sputnikvm", branch = "ekiden", default-features = false }
#clap = "2.26"
secp256k1-plus = "0.5"
#rand = "0.3.1"
sha3 = "0.6"
blockchain = "0.2"
etcommon-bigint = { git = "https://github.com/ekiden/etcommon-rs", branch = "ekiden", features = ["string", "rlp", "serialize"], default-features = false }
etcommon-hexutil = { git = "https://github.com/ekiden/etcommon-rs", branch = "ekiden", default-features = false }
etcommon-rlp = { git = "https://github.com/ekiden/etcommon-rs", branch = "ekiden" }
etcommon-block = { git = "https://github.com/ekiden/etcommon-rs", branch = "ekiden" }
lazy_static = "0.2"
jsonrpc-core = { version = "8.0" }
jsonrpc-http-server = { version = "8.0" }
jsonrpc-macros = { version = "8.0" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
pretty_env_logger = "0.2"

