[package]
name = "web3-client"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>", "Wei Tang <hi@that.world>"]

[dependencies]

## Ekiden client dependencies

clap = "2.29.1"
client-utils = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-contract-client = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-core = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-rpc-client = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
evm-api = { path = "../api" }
futures = "0.1.18"
grpcio = "0.2.2"
rand = "0.4"

## Parity/EVM dependencies

ethbloom = { git = "https://github.com/ekiden/primitives", branch = "ekiden" }
ethereum-types = { git = "https://github.com/ekiden/primitives", branch = "ekiden" }
hex = "0.3.1"
jsonrpc-core = { version = "8.0" }
jsonrpc-http-server = { version = "8.0" }
jsonrpc-macros = { version = "8.0" }
lazy_static = "0.2"
log = "0.4"
pretty_env_logger = "0.2"
rlp = { git = "https://github.com/ekiden/parity", branch = "ekiden" }
rustc-hex = "1.0"
secp256k1-plus = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha3 = "0.6"
