[package]
name = "oasis-runtime-common"
version = "0.3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
# Oasis Core.
oasis-core-runtime = { git = "https://github.com/oasislabs/oasis-core", branch = "master" }
oasis-core-keymanager-client = { git = "https://github.com/oasislabs/oasis-core", branch = "master" }

# Parity.
ethcore = { git = "https://github.com/oasislabs/oasis-parity", branch = "nonce-w-key" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
hashdb = { git = "https://github.com/oasislabs/oasis-parity", branch = "nonce-w-key" }
keccak-hash = { git = "https://github.com/oasislabs/oasis-parity", branch = "nonce-w-key" }
vm = { git = "https://github.com/oasislabs/oasis-parity", branch = "nonce-w-key" }

# Others.
elastic-array = "0.10"
failure = "0.1.5"
io-context = "0.2.0"
lazy_static = "1.3.0"
zeroize = "0.10"

[features]
default = []
benchmarking = []
production-genesis = []
test = []
