[package]
name = "oasis-runtime-common"
version = "0.3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
# Oasis Core.
oasis-core-runtime = { git = "https://github.com/oasislabs/oasis-core", rev = "0757868e351a63ad44d52b0d2df44c16b4e5c823" }
# This will have to target a specific commit until new oasis-core release is
# made.
oasis-core-keymanager-client = { git = "https://github.com/oasislabs/oasis-core", rev = "0757868e351a63ad44d52b0d2df44c16b4e5c823" }

# Parity.
ethcore = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
hashdb = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
keccak-hash = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
vm = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }

# Others.
elastic-array = "0.10"
failure = "0.1.5"
io-context = "0.2.0"
lazy_static = "1.3.0"
zeroize = "0.10"

[features]
default = []
benchmarking = []
production-genesis = []
test = []
