[package]
name = "oasis-ethwasi-runtime-common"
version = "0.3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
# Oasis Core.
oasis-core-keymanager-client = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v21.0.1" }
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v21.0.1" }

# Parity.
ethcore = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
hashdb = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
keccak-hash = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
vm = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }

# Others.
anyhow = "1.0"
elastic-array = "0.10"
io-context = "0.2.0"
lazy_static = "1.3.0"
zeroize = "0.10"

[features]
default = []
benchmarking = []
production-genesis = []
test = []
