[package]
name = "web3-gateway"
version = "0.3.0"
license = "GPL-3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>", "Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.3"
slog = "2.4.1"
parking_lot = "0.5"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.1"
fdlimit = "0.1"
signal-hook = "0.1.8"
prometheus = { version = "0.7", features = ["push"] }
jsonrpc-core = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "oasis-parity-1.11" }
jsonrpc-http-server = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "oasis-parity-1.11" }
jsonrpc-ws-server = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "oasis-parity-1.11" }
jsonrpc-macros = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "oasis-parity-1.11" }
jsonrpc-pubsub = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "oasis-parity-1.11" }
lazy_static = "1.3.0"
wasmi = "0.4"
ethcore = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
rlp = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
parity-reactor = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
parity-rpc = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
keccak-hash = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
mem = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }

## Common functionality between runtime and gateway
runtime-ethereum-common = { path = "../common" }

## Ekiden client dependencies
clap = "2.29.1"
ekiden-client = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-runtime = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-keymanager-client = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
runtime-ethereum-api = { path = "../api" }
rand = "0.4"
grpcio = "0.4.4"
tokio = "0.1.17"
tokio-threadpool = "0.1.14"
failure = "0.1.5"
io-context = "0.2.0"

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
hex = "0.3"

[features]
default = ["pubsub"]
pubsub = []
production-genesis = ["runtime-ethereum-common/production-genesis"]
benchmarking = ["runtime-ethereum-common/benchmarking"]

[[bin]]
name = "gateway"
path ="bin/main.rs"
