[package]
name = "web3-gateway"
version = "0.3.0"
license = "GPL-3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>", "Parity Technologies <admin@parity.io>"]

[dependencies]
ethcore = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
fdlimit = "0.1"
futures = "0.1"
jsonrpc-core = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "hyper-v0.12" }
jsonrpc-http-server = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "hyper-v0.12" }
jsonrpc-macros = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "hyper-v0.12" }
jsonrpc-pubsub = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "hyper-v0.12" }
jsonrpc-ws-server = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "hyper-v0.12" }
keccak-hash = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
lazy_static = "1.3.0"
log = "0.4"
mem = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
parity-reactor = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
parity-rpc = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
parking_lot = "0.5"
prometheus = { version = "0.8", features = ["push"] }
rlp = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
serde = "1.0"
serde_bytes = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
signal-hook = "0.1.8"
slog = "2.4.1"
wasmi = "0.4"

## Common functionality between runtime and gateway
oasis-ethwasi-runtime-common = { path = "../common" }

## Oasis Core client dependencies.
oasis-core-client = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.12.3" }
oasis-core-keymanager-client = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.12.3" }
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.12.3" }
oasis-ethwasi-runtime-api = { path = "../api" }

anyhow = "1.0"
clap = "2.29.1"
grpcio = { version = "0.4.4", features = ["openssl"] }
io-context = "0.2.0"
rand = "0.4"
tokio = "0.1.17"
tokio-threadpool = "0.1.14"

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
hex = "0.3"

[features]
default = ["pubsub"]
pubsub = []
production-genesis = ["oasis-ethwasi-runtime-common/production-genesis"]
benchmarking = ["oasis-ethwasi-runtime-common/benchmarking"]

[[bin]]
name = "gateway"
path ="bin/main.rs"
