[package]
name = "genesis"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
runtime-ethereum-common = { path = "../common" }
ekiden-client = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-runtime = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
clap = "2.29.1"
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
filebuffer = "0.4.0"
hex = "0.3.1"
rlp = { git = "https://github.com/oasislabs/parity", branch = "ekiden" }
ethcore = { git = "https://github.com/oasislabs/parity", branch = "ekiden" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_bytes = "~0.10"
grpcio = "0.4.4"
failure = "0.1.5"
