[package]
name = "genesis"
version = "0.3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
oasis-runtime-common = { path = "../common" }

# The referenced commit has rust code compatible with artifacts in oasis-core
# release: 20.5, with some rust changes needed that were not yet present in
# that release.
# Once a new oasis-core release is made, update the references to point to the
# new release.
oasis-core-client = { git = "https://github.com/oasislabs/oasis-core", rev = "0757868e351a63ad44d52b0d2df44c16b4e5c823" }
oasis-core-runtime = { git = "https://github.com/oasislabs/oasis-core", rev = "0757868e351a63ad44d52b0d2df44c16b4e5c823" }

clap = "2.29.1"
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
filebuffer = "0.4.0"
hex = "0.3.1"
rlp = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
ethcore = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_bytes = "~0.10"
grpcio = "0.4.4"
failure = "0.1.5"
io-context = "0.2.0"

[[bin]]
name = "genesis-init"
path ="bin/genesis_init.rs"

[[bin]]
name = "genesis-playback"
path ="bin/genesis_playback.rs"
