[package]
name = "genesis"
version = "0.3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
oasis-runtime-common = { path = "../common" }

oasis-core-client = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.7" }
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.7" }

clap = "2.29.1"
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
filebuffer = "0.4.0"
hex = "0.3.1"
rlp = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
ethcore = { git = "https://github.com/oasislabs/oasis-parity", branch = "ekiden" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_bytes = "~0.10"
grpcio = "0.4.4"
io-context = "0.2.0"

[[bin]]
name = "genesis-init"
path ="bin/genesis_init.rs"

[[bin]]
name = "genesis-playback"
path ="bin/genesis_playback.rs"
