[package]
name = "inspector"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
clap = "2.29.1"
ethereum-types = { git = "https://github.com/oasislabs/primitives", branch = "ekiden" }
filebuffer = "0.4.0"
hex = "0.3.1"
log = "0.4"
pretty_env_logger = "0.2"
rlp = { git = "https://github.com/oasislabs/parity", branch = "kostko/feature/ekiden-0.3" }
ethcore = { git = "https://github.com/oasislabs/parity", branch = "kostko/feature/ekiden-0.3" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

client-utils = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-runtime-client = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-storage-base = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-storage-batch = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-storage-client = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-core = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-db-trusted = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-roothash-api = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-roothash-base = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-roothash-client = { git = "https://github.com/oasislabs/ekiden", branch = "master" }

runtime-ethereum-common = { path = "../common" }
patricia-trie = { path = "./parity_patricia_trie" }
