[package]
name = "oasis-runtime-keymanager"
version = "0.3.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[package.metadata.fortanix-sgx]
heap-size = 134217728
stack-size = 2097152
threads = 2

[dependencies]
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.7" }
oasis-core-keymanager-lib = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.7" }
oasis-core-keymanager-api-common = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.7" }

[build-dependencies]
oasis-core-tools = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.7" }
