[package]
name = "playback"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
clap = "2.29.1"
etcommon-bigint = { git = "https://github.com/ekiden/etcommon-rs", branch = "ekiden", features = ["string", "rlp", "serialize"], default-features = false }
etcommon-rlp = { git = "https://github.com/ekiden/etcommon-rs", branch = "ekiden" }
etcommon-block = { git = "https://github.com/ekiden/etcommon-rs", branch = "ekiden" }
filebuffer = "0.4.0"
futures = "0.1.18"
grpcio = { git = "https://github.com/ekiden/grpc-rs", tag = "v0.3.0-ekiden1", features = ["openssl"] }
hex = "0.3.1"
log = "0.4"
pretty_env_logger = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

client-utils = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-contract-client = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-core = { git = "https://github.com/oasislabs/ekiden", branch = "master" }
ekiden-rpc-client = { git = "https://github.com/oasislabs/ekiden", branch = "master" }

evm-api = { path = "../api" }
