[package]
name = "t"
version = "0.1.0"
authors = ["Armani Ferrante <armaniferrante@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
runtime-ethereum = { path = "../" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
