[package]
name = "test_contract"
version = "0.1.0"
authors = ["David Yan <david.yan@berkeley.edu>"]

[dependencies]
#pwasm-std = "0.7"
#pwasm-ethereum = "0.4"
pwasm-ethereum = { git = "https://github.com/ekiden/pwasm-ethereum" }
wee_alloc = "0.4.1"

[dependencies.parity-hash]
version = "1"
default-features = false

[dependencies.bigint]
version = "4"
default-features = false

[lib]
crate-type = ["cdylib"]

[build-dependencies]
ar = "0.6.0"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
