[package]
name = "helloworld-client"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
client-utils = { git = "https://github.com/oasislabs/ekiden", tag = "0.1.0-alpha.3" }
ekiden-core = { git = "https://github.com/oasislabs/ekiden", tag = "0.1.0-alpha.3" }
ekiden-rpc-client = { git = "https://github.com/oasislabs/ekiden", tag = "0.1.0-alpha.3" }
helloworld-api = { path = "../../api" }
clap = "2.29.1"
rand = "0.4"
futures = "0.1.18"
grpcio = "0.2.2"
